--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -6,5 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
+    android:fontFamily="@font/lato_light"
     android:textColor="@color/white"
     android:textAlignment="inherit"/>
